fix z-index'

--- a/web/src/main/resources/static/src/style/style.scss
+++ b/web/src/main/resources/static/src/style/style.scss
@@ -50,7 +50,9 @@ body{
   #map {
     width: calc(100% - 0px);
     height: calc(100% - 0px);
-    z-index: -1;
+    //z-index: -1;
   }
-
+  .leaflet-popup{
+    z-index: 300;
+  }
 }
